# ENN-PyTorch

./: .gitignore  LICENSE  MANIFEST.in  README.md  apply_1.patch  apply_1st.patch  apply_2.patch  apply_2nd.patch  apply_me.diff  apply_me.patch  apply_merged.patch  apply_this.patch  checkpoint_hotfix.diff  colab_314t.ipynb  diff1.patch  diff2.patch  enn_import_cleanup_git.diff  enn_patch_v8_full.diff  export_runner.py  head_metrics.csv  jupyter.ipynb  notebook.ipynb  patch.diff  prediction.xlsx  predictions_summary.csv  pyproject.toml  raw_data.xlsx  raw_data.xlsx.xlsx  requirements.txt  sitecustomize.py  stnet_all_in_one_plus12_git.patch  stnet_changes.patch  stnet_integrated_v2.patch  stnet_launch.patch  stnet_next_stage.patch  stnet_optionB_pgate_autok_asymk_edge_reg_lr_tile_quant_FULL.git.diff  stnet_refactor.patch  stnet_runtime_api.patch  stnet_xccl_gloo_patch.diff  test_train_predict.py  (+2 more)
debug/: deployment.py  lifecycle.py
enn_torch/: __init__.py  api.py  config.py  schema.py
enn_torch/core/: __init__.py  checkpoint.py  compat.py  concurrency.py  config.py  datatypes.py  diag.py  distributed.py  graph.py  policies.py  precision.py  profiler.py  system.py  tensor.py
enn_torch/data/: __init__.py  collate.py  nodes.py  pipeline.py
enn_torch/nn/: __init__.py  activations.py  architecture.py  blocks.py  checkpoint.py  graph.py  kernels.py  layers.py  profiler.py  wrappers.py
enn_torch/runtime/: __init__.py  autobatch.py  autoscaling.py  autotune.py  distributed.py  io.py  losses.py  main.py  optimizers.py  workflow.py  workflows.py  wrappers.py
scripts/: verify_engine_runtime.py
stformer/: __init__.py
stformer/architecture/: __init__.py  module.py  network.py
stformer/connection/: __init__.py  memory.py  queue.py  socket.py
stformer/pipeline/: __init__.py  collate.py  dataset.py  distributed.py
stformer/toolkit/: __init__.py  capability.py  compat.py  optimization.py
stformer/workflow/: __init__.py  management.py  operation.py
stnet/: __init__.py  api.py  config.py  distributed.py  kernels.py
stnet/api/: __init__.py  config.py  io.py  optimizers.py  run.py  runtime.py  templates.py  utils.py
stnet/architecture/: __init__.py  config.py  module.py  network.py
stnet/backend/: __init__.py  compat.py  distributed.py  engine.py  environment.py  export.py  fx.py  graph.py  launch.py  optimizers.py  precision.py  profiler.py  runtime.py  staging.py  system.py
stnet/connection/: __init__.py  memory.py  queue.py  socket.py
stnet/core/: __init__.py  casting.py  compat.py  concurrency.py  config.py  datatypes.py  distributed.py  graph.py  losses.py  optimizers.py  policies.py  precision.py  profiler.py  staging.py  system.py  tensor.py
stnet/data/: __init__.py  collate.py  collections.py  dataset.py  datatype.py  distributed.py  nodes.py  pipeline.py  raw_subsets.py  schemas.py  stats.py  storage.py  transforms.py
stnet/functional/: __init__.py  fx.py  loss.py  losses.py  optim.py  optimizers.py  profiler.py
stnet/model/: __init__.py  activations.py  architecture.py  blocks.py  functional.py  fused.py  kernels.py  layers.py  modules.py  nn.py  ops.py  optimizers.py  primitives.py
stnet/nn/: __init__.py  activations.py  architecture.py  blocks.py  config.py  container.py  functional.py  kernels.py  layers.py  module.py  primitives.py
stnet/pipeline/: __init__.py  collate.py  dataset.py  datatype.py  distributed.py
stnet/run/: __init__.py  compute.py  elastic.py  io.py  launch.py
stnet/runtime/: __init__.py  distributed.py  engine.py  io.py  launch.py  losses.py  main.py  management.py  operation.py  optimizers.py  wrappers.py
stnet/toolkit/: __init__.py  capability.py  compat.py  optimization.py  preprocessing.py
stnet/transport/: __init__.py  distributed.py  memory.py  queue.py  socket.py
stnet/utils/: __init__.py  capability.py  compat.py  datatype.py  debug.py  distributed.py  io.py  optimization.py  platform.py  profiler.py  transform.py
stnet/workflow/: __init__.py  config.py  management.py  operation.py
tests/: __init__.py  test_dot_product_attention_masks.py  test_export_io.py  test_format_flight_host.py
tools/: export_smoke.py  pickle_smoke.py  stream_state_smoke.py
