[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stnet-pytorch"
version = "1.0.0"
description = "Spatio-temporal modular neural network (MNN) model implemented with PyTorch"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kim Jeseok" }]
keywords = ["transformer", "spatio-temporal", "pytorch", "time-series", "fp8", "training", "onnx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: Free Threading",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3 :: Free Threading",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.13 :: Free Threading",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.2.5",
  "psutil>=7.0.0",
  "py-cpuinfo>=9.0.0",
  "torch>=2.8.0",
  "torchdata>=0.11.0",
  "tensordict>=0.10.0",
  "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/P-R-N-D/STNet-PyTorch"
Issues = "https://github.com/P-R-N-D/STNet-PyTorch/issues"

[project.optional-dependencies]
safetensors = ["safetensors>=0.4.0"]
pandas = ["pandas>=2.2.0", "openpyxl>=3.1.5", "fastexcel>=0.14.0", "xlsxwriter>=3.2.0"]
pandas_on_spark = ["pyspark[pandas_on_spark]>=4.0.0", "openpyxl>=3.1.5", "fastexcel>=0.14.0", "xlsxwriter>=3.2.0"]
polars = ["polars>=1.30.0", "openpyxl>=3.1.5", "fastexcel>=0.14.0", "xlsxwriter>=3.2.0"]
torchao = ["torchao>=0.14.0"]
nvidia_te_cu12 = ["transformer-engine-cu12>=2.2.0", "transformer-engine-torch>=2.2.0"]
nvidia_te_cu13 = ["transformer-engine-cu13>=2.2.0", "transformer-engine-torch>=2.2.0"]
intel_ai = ["intel-extension-for-pytorch>=2.7.0"]
deployment = [
  "onnx>=1.18.0",
  "onnxruntime>=1.18.0",
  "onnx-tf>=1.10.0",
  "onnx2tf>=1.27.2",
  "coremltools>=8.3.0; platform_system=='Darwin'",
  "tensorrt>=10.10.0.31; platform_system=='Linux'",
  "executorch>=0.6.0",
]
# NVML telemetry (optional)
# Note: the *module* used by this project is `pynvml`, but the recommended PyPI
# distribution is `nvidia-ml-py`.
telemetry = ["nvidia-ml-py>=11.515.48"]
nufft = ["cufinufft"]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "black>=24.0.0",
  "pre-commit>=3.7.0",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE*"]

[tool.setuptools.packages.find]
where = [""]
include = ["stnet*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"stnet" = [
  "**/*.json",
  "**/*.yaml",
  "**/*.yml",
  "**/*.ini",
  "**/*.cfg",
  "**/*.md",
  "**/*.txt",
  "**/*.pt",
  "**/*.pth",
  "**/*.onnx",
  "**/*.bin",
]


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Start with a small rule set (pyflakes + syntax errors) and tighten over time.
select = ["F", "E9"]


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
