[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enn-torch"
version = "1.0.0"
description = "Elastic Neural Networks (ENN), MLOps framework for high-performance computing (HPC) — flexible and efficient by design, adaptive and stable at runtime"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kim Jeseok" }]
keywords = [
  "transformer",
  "spatio-temporal",
  "pytorch",
  "time-series",
  "fp8",
  "training",
  "onnx",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: Free Threading",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3 :: Free Threading",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13 :: Free Threading",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.4.1",
  "psutil>=7.2.1",
  "py-cpuinfo>=9.0.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "torchaudio>=2.9.1",
  "triton>=3.5.1",
  "torchao>=0.15.0",
  "torchdata>=0.11.0",
  "tensordict>=0.10.0",
  "tqdm>=4.67.1",
  "h5py>=3.15.1",
  "onnx>=1.20.1",
  "onnxruntime>=1.23.2",
  "onnxscript>=0.5.7",
  "onnxoptimizer>=0.4.2",
  "onnx_ir>=0.1.14",
  "openzl>=0.1.0",
  "ml_dtypes>=0.5.4",
]

[project.urls]
Repository = "https://github.com/P-R-N-D/ENN-PyTorch"
Issues = "https://github.com/P-R-N-D/ENN-PyTorch/issues"

[project.optional-dependencies]
safetensors = ["safetensors>=0.4.0"]
pandas = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.5",
  "fastexcel>=0.14.0",
  "xlsxwriter>=3.2.0",
]
pandas_on_spark = [
  "pyspark[pandas_on_spark]>=4.0.0",
  "openpyxl>=3.1.5",
  "fastexcel>=0.14.0",
  "xlsxwriter>=3.2.0",
]
polars = [
  "polars>=1.30.0",
  "openpyxl>=3.1.5",
  "fastexcel>=0.14.0",
  "xlsxwriter>=3.2.0",
]
nvidia_te_cu12 = [
  "transformer-engine-cu12>=2.2.0",
  "transformer-engine-torch>=2.2.0",
]
nvidia_te_cu13 = [
  "transformer-engine-cu13>=2.2.0",
  "transformer-engine-torch>=2.2.0",
]
intel_ai = ["intel-extension-for-pytorch>=2.7.0"]
export_tensorflow = [
  "onnx2tf>=1.28.8",
  "tensorflow>=2.20.0",
  "tf-keras>=2.20.1",
]
export_litert = [
  "ai-edge-torch>=0.7.1",
]
export_executorch = [
  "executorch>=1.0.1; python_version < '3.13'",
]
export_coreml = [
  "coremltools>=9.0; platform_system == 'Darwin'",
]
export_tensorrt = [
  "torch-tensorrt>=2.9.0; platform_system == 'Linux'",
  "onnx-graphsurgeon>=0.5.8; platform_system == 'Linux'",
  "torch-tensorrt-bzl>=1.3.0; platform_system == 'Linux'",
  "torch-tensorrt-rtx>=0.0.1; platform_system == 'Linux'",
  "onnxruntime-trt-rtx>=1.23.2; platform_system == 'Windows'",
  "tensorrt>=10.10.0; platform_system == 'Linux'",
]
deployment_full = [
  "onnx2tf>=1.28.8",
  "tf-keras>=2.20.1",
  "tensorflow>=2.20.0",
  "ai-edge-torch>=0.7.1",
  "executorch>=1.0.1; python_version < '3.13'",
  "coremltools>=9.0; platform_system == 'Darwin'",
  "torch-tensorrt>=2.9.0; platform_system == 'Linux'",
  "onnx-graphsurgeon>=0.5.8; platform_system == 'Linux'",
  "torch-tensorrt-bzl>=1.3.0; platform_system == 'Linux'",
  "torch-tensorrt-rtx>=0.0.1; platform_system == 'Linux'",
  "onnxruntime-trt-rtx>=1.23.2; platform_system == 'Windows'",
  "tensorrt>=10.10.0; platform_system == 'Linux'",
]
